# haskell-99-questions

./: haskell-99-questions.cabal  haskell-ninety-nine-questions.cabal
src/: PartOne.hs
src/Problems/: PartOne.hs  PartThree.hs  PartTwo.hs
test/: PartOneSpec.hs  Spec.hs
test/Problems/: PartOneSpec.hs  PartThreeSpec.hs  PartTwoSpec.hs
